# pdf-parser-API

./: API endpoint testing.postman_collection.json  LICENSE  README.md  app.py  config.py  pdf_parsing.py  pyproject.toml  requirements.txt  semantic_analysis.py  test.py
